2008-08-21 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	(openvrml::gl::viewer::do_insert_shell(unsigned int, const
	std::vector<vec3f> & coord, const std::vector<int32> &
	coord_index, const std::vector<color> & color, const
	std::vector<int32> & color_index, const std::vector<vec3f> &
	normal, const std::vector<int32> & normal_index, const
	std::vector<vec2f> & tex_coord, const std::vector<int32> &
	tex_coord_index)): Quell some warnings from gcc.

2008-08-15 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::browser::load_url(const std::vector<std::string> &,
	const std::vector<std::string> &)): Improved doc-comment.

2008-08-15 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node.cpp: Symbols with internal linkage
	don't need visibility attributes.

2008-08-13 Braden McDaniel  <braden@endoframe.com>

	Updates for 0.17.8 release.

	* NEWS
	* README
	* configure.ac
	* doc/Doxyfile
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.rc
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.rc
	* mozilla-plugin/configure.ac

2008-08-13 Braden McDaniel  <braden@endoframe.com>

	* src/openvrml-player/player.cpp: Updated "About" dialog license
	text to reflect GPLv3 licensing.

2008-08-13 Braden McDaniel  <braden@endoframe.com>

	* src/openvrml-xembed/gtkvrmlbrowser.cpp: Fixed invocation of
	G_DEFINE_TYPE to point at the parent type.

2008-08-12 Braden McDaniel  <braden@endoframe.com>

	Updates for 0.17.7 release.

	* NEWS
	* README
	* configure.ac
	* doc/Doxyfile
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.rc
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.rc
	* mozilla-plugin/configure.ac
	* src/Makefile.am: Updated libopenvrml libtool library version to