@@ -1,5 +1,11 @@
 2008-08-21 Braden McDaniel  <braden@endoframe.com>
 
+	* src/script/java.cpp (create_java_vm(JavaVM *&, JNIEnv *&)):
+	Quell gcc warning about deprecated automatic conversion of string
+	literals to char* (from const char*).
+
+2008-08-21 Braden McDaniel  <braden@endoframe.com>
+
 	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
 	(openvrml::gl::viewer::do_insert_shell(unsigned int, const
 	std::vector<vec3f> & coord, const std::vector<int32> &
@@ -7,7 +13,8 @@
 	std::vector<int32> & color_index, const std::vector<vec3f> &
 	normal, const std::vector<int32> & normal_index, const
 	std::vector<vec2f> & tex_coord, const std::vector<int32> &
-	tex_coord_index)): Quell some warnings from gcc.
+	tex_coord_index)): Quell some warnings from gcc about comparing
+	signed and unsigned types.
 
 2008-08-15 Braden McDaniel  <braden@endoframe.com>
 
